--- a/public/public/style/style.css
+++ b/public/public/style/style.css
@@ -2,10 +2,47 @@
   margin: 0;
 }
 
+
 body {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 100;
   background-color: #00010d;
+}
+
+
+.userCreation{
+  margin: auto;
+  margin-top: 10vh;
+  width: 30%;
+  color: white;
+}
+
+
+.userCreation  input[type="text"], input[type="password"]{
+  padding: 15px;
+  border-radius: 10px;
+  text-transform: capitalize;
+  box-shadow: 2px 2px 2px black;
+}
+
+.userCreation button{
+  padding: 10px;
+  padding-right: 50px;
+  padding-left: 50px;
+  border-radius: 10px;
+  transition-duration: 0.5s;
+}
+
+.userCreation button:hover{
+  background-color: gray;
+  border-radius: 25px;
+  transition-duration: 0.5s;
+}
+
+
+
+.userCreation > credentials{
+  margin: auto;
 }
 
 h1,
