--- a/page/assets/scss/table.css
+++ b/page/assets/scss/table.css
@@ -31,19 +31,42 @@
   padding: 30px 0;
   flex-grow: 1;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: start;
   list-style-type: none;
   border-right: 1px dashed #ccc;
   flex: 1;
+  gap: 15px;  /* Domyślny odstęp między elementami w każdym brackecie */
+}
+/* Zaktualizowane komponenty */
+.bracket-1 {
+  
+  gap: 8px;  /* Większa przestrzeń w bracket-1 */
 }
 
+.bracket-2 {
+  margin-top: 5vh;
+  gap: 10vh;  /* Większa przestrzeń w bracket-2 */
+}
+
+.bracket-3 {
+  margin-top: 15vh;
+  gap: 27vh  /* Jeszcze większa przestrzeń w bracket-3 */
+}
+
+.bracket-4 {
+  margin-top: 33vh;
+  gap: 65vh;  /* Największa przestrzeń w bracket-4 */
+}
+
+
+/* Dostosowanie dla team-item */
 .team-item {
   background-color: #f4f4f4;
   padding: 0.5rem;
   display: block;
-  margin: 0.5rem 10px;
+  margin: 1rem 10px;  /* Zwiększony margines między team-item */
   position: relative;
-  vertical-align: middle;
+  vertical-align: top;
   line-height: 2;
   text-align: center;
 }
@@ -82,10 +105,12 @@
   top: 50%;
 }
 
+/* Specjalne ustawienia dla wysokości i orientacji */
 .bracket-2 .team-item:nth-of-type(odd):after {
   height: 200%;
   top: 50%;
 }
+
 .bracket-2 .team-item:nth-of-type(even):after {
   height: 200%;
   top: -150%;
@@ -95,6 +120,7 @@
   height: 350%;
   top: 50%;
 }
+
 .bracket-3 .team-item:nth-of-type(even):after {
   height: 350%;
   top: -300%;
@@ -104,11 +130,13 @@
   height: 700%;
   top: 50%;
 }
+
 .bracket-4 .team-item:nth-of-type(even):after {
-  height: 700%;
-  top: -650%;
+  height: 1120%;
+  top: -1000%;
 }
 
+/* Dodatkowe zmiany dla bracketa pierwszego i ostatniego */
 .bracket:first-of-type .team-item:before {
   display: none;
 }
@@ -122,6 +150,10 @@
   display: none;
 }
 
+.bracket-5{
+  margin-top: 70vh;
+    /* Największa przestrzeń w bracket-4 */
+}
 .team-item time {
   display: inline-block;
   background-color: #dbdbdb;
